--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -113,5 +113,8 @@
         <file>images/qml/alert-triangle.png</file>
         <file>images/qml/alert-triangle@2x.png</file>
         <file>images/qml/alert-triangle@3x.png</file>
+        <file>images/qml/device-centre-update.png</file>
+        <file>images/qml/device-centre-update@2x.png</file>
+        <file>images/qml/device-centre-update@3x.png</file>
     </qresource>
 </RCC>
