--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -195,8 +195,8 @@
         <file>backups/ResumePage.qml</file>
         <file>backups/BackupsPage.qml</file>
         <file>surveys/qmldir</file>
-        <file>surveys/OneQuestionSurveyStrings.qml</file>
-        <file>surveys/OneQuestionSurveyItem.qml</file>
+        <file>surveys/SurveyStrings.qml</file>
+        <file>surveys/SurveyItem.qml</file>
         <file>surveys/RateScaleItem.qml</file>
         <file>deviceCentre/DeviceCentreDialog.qml</file>
         <file>deviceCentre/DeviceCentreStrings.qml</file>
