SNC-4972 : Remove hardcoded color for the highlighted rows.

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
@@ -30,7 +30,7 @@ padding-left:4px;
 
 QTableView::item::selected
 {
-background-color: rgba(0,120,215,0.8); /* TODO: replace harcoded color with token!*/
+background-color: #ffbdd9ff; /*colorToken.focus*/
 }
 
 QTableView::indicator
