--- a/src/MEGASync/gui/win/NotificationItem.ui
+++ b/src/MEGASync/gui/win/NotificationItem.ui
@@ -18,14 +18,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
+    <width>0</width>
     <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>346</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="cursor">
@@ -120,7 +120,7 @@ background-color: rgba(0,0,0,0.1);
    <item>
     <widget class="QWidget" name="wContainer" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -159,10 +159,22 @@ background-color: rgba(0,0,0,0.1);
       <item>
        <widget class="QWidget" name="wVerticalHeader" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>368</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>368</width>
+          <height>16777215</height>
+         </size>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <property name="spacing">
@@ -175,7 +187,7 @@ background-color: rgba(0,0,0,0.1);
           <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>0</number>
+          <number>8</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
@@ -183,7 +195,7 @@ background-color: rgba(0,0,0,0.1);
          <item>
           <widget class="QWidget" name="wHeader" native="true">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -200,7 +212,7 @@ background-color: rgba(0,0,0,0.1);
              <height>16</height>
             </size>
            </property>
-           <layout class="QHBoxLayout" name="horizontalLayout">
+           <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
             <property name="spacing">
              <number>0</number>
             </property>
@@ -236,8 +248,8 @@ background-color: rgba(0,0,0,0.1);
               </property>
               <property name="sizeHint" stdset="0">
                <size>
-                <width>40</width>
-                <height>20</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
              </spacer>
@@ -368,15 +380,21 @@ background-color: rgba(0,0,0,0.1);
       <item>
        <widget class="QWidget" name="wVerticalContent" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>234</height>
+          <height>16777215</height>
          </size>
         </property>
         <layout class="QVBoxLayout" name="vlContent">
@@ -401,14 +419,20 @@ background-color: rgba(0,0,0,0.1);
          <item>
           <widget class="QWidget" name="wHorizontalDescription" native="true">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>368</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
+             <width>368</width>
              <height>66</height>
             </size>
            </property>
@@ -436,6 +460,12 @@ background-color: rgba(0,0,0,0.1);
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
@@ -454,7 +484,7 @@ background-color: rgba(0,0,0,0.1);
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="lImageSmall">
+             <widget class="ApiImageLabel" name="lImageSmall">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -486,6 +516,12 @@ background-color: rgba(0,0,0,0.1);
          </item>
          <item>
           <widget class="QWidget" name="wDescButton" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <layout class="QVBoxLayout" name="vblDescButton">
             <property name="spacing">
              <number>12</number>
@@ -506,9 +542,9 @@ background-color: rgba(0,0,0,0.1);
              <number>0</number>
             </property>
             <item>
-             <widget class="QLabel" name="lImageLarge">
+             <widget class="ApiImageLabel" name="lImageLarge">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
@@ -516,13 +552,13 @@ background-color: rgba(0,0,0,0.1);
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>0</height>
+                <height>115</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>368</width>
-                <height>115</height>
+                <width>16777215</width>
+                <height>16777215</height>
                </size>
               </property>
               <property name="text">
@@ -551,7 +587,7 @@ background-color: rgba(0,0,0,0.1);
                </size>
               </property>
               <property name="cursor">
-               <cursorShape>ArrowCursor</cursorShape>
+               <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="text">
                <string/>
@@ -615,6 +651,13 @@ background-color: rgba(0,0,0,0.1);
   <zorder>wSeparator</zorder>
   <zorder>wContainer</zorder>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ApiImageLabel</class>
+   <extends>QLabel</extends>
+   <header>ApiImageLabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../Resources_win.qrc"/>
  </resources>
