--- a/src/MEGASync/gui/ui/OpenBackupsFolder.ui
+++ b/src/MEGASync/gui/ui/OpenBackupsFolder.ui
@@ -17,7 +17,13 @@
    <property name="spacing">
     <number>0</number>
    </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
    <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
     <number>0</number>
    </property>
    <property name="bottomMargin">
@@ -44,6 +50,18 @@
       <string notr="true">mega</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="leftMargin">
+       <number>12</number>
+      </property>
+      <property name="topMargin">
+       <number>12</number>
+      </property>
+      <property name="rightMargin">
+       <number>12</number>
+      </property>
+      <property name="bottomMargin">
+       <number>12</number>
+      </property>
       <item>
        <widget class="QLineEdit" name="lBackupFolder">
         <property name="minimumSize">
