--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>765</width>
+    <width>755</width>
     <height>765</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>765</width>
+    <width>755</width>
     <height>765</height>
    </size>
   </property>
@@ -714,7 +714,13 @@ margin-bottom: 3px;
           <string notr="true">mega</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="1,0,1">
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
           <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
            <number>12</number>
           </property>
           <property name="bottomMargin">
@@ -884,16 +890,16 @@ margin-bottom: 3px;
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_17">
             <property name="leftMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="topMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="rightMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="bottomMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <item>
              <widget class="QComboBox" name="cLanguage">
@@ -947,16 +953,16 @@ margin-bottom: 3px;
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_21">
             <property name="leftMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="topMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="rightMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <property name="bottomMargin">
-             <number>10</number>
+             <number>12</number>
             </property>
             <item>
              <widget class="QComboBox" name="cbTheme">
@@ -1020,7 +1026,16 @@ margin-bottom: 3px;
            <number>0</number>
           </property>
           <property name="leftMargin">
-           <number>14</number>
+           <number>12</number>
+          </property>
+          <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
+           <number>12</number>
+          </property>
+          <property name="bottomMargin">
+           <number>12</number>
           </property>
           <item>
            <widget class="QCheckBox" name="cbSleepMode">
@@ -1056,7 +1071,13 @@ margin-bottom: 3px;
           <property name="spacing">
            <number>0</number>
           </property>
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
           <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
            <number>12</number>
           </property>
           <property name="bottomMargin">
@@ -1207,6 +1228,18 @@ margin-bottom: 3px;
           <string notr="true">mega</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
+          <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
+           <number>12</number>
+          </property>
+          <property name="bottomMargin">
+           <number>12</number>
+          </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_4">
             <item>
@@ -1359,19 +1392,19 @@ margin-bottom: 3px;
          </property>
          <layout class="QVBoxLayout" name="gStorageSpaceLayout">
           <property name="spacing">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="leftMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="topMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="rightMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="bottomMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <item>
            <widget class="QProgressBar" name="pStorageQuota">
@@ -1459,17 +1492,20 @@ margin-bottom: 3px;
           <string notr="true">mega</string>
          </property>
          <layout class="QVBoxLayout" name="gBandwidthQuotaLayout">
+          <property name="spacing">
+           <number>12</number>
+          </property>
           <property name="leftMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="topMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="rightMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="bottomMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <item>
            <widget class="QProgressBar" name="pTransferQuota">
