--- a/src/MEGASync/gui/ui/SyncSettingsUIBase.ui
+++ b/src/MEGASync/gui/ui/SyncSettingsUIBase.ui
@@ -66,7 +66,7 @@
          </sizepolicy>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="pSavingSyncs">
          <layout class="QHBoxLayout" name="horizontalLayout_33">
@@ -169,7 +169,16 @@
               <number>0</number>
              </property>
              <property name="leftMargin">
-              <number>10</number>
+              <number>12</number>
+             </property>
+             <property name="topMargin">
+              <number>12</number>
+             </property>
+             <property name="rightMargin">
+              <number>12</number>
+             </property>
+             <property name="bottomMargin">
+              <number>12</number>
              </property>
              <item>
               <widget class="QLabel" name="lDisabledSyncs">
