--- a/src/MEGASync/gui/ui/SyncStallModeSelector.ui
+++ b/src/MEGASync/gui/ui/SyncStallModeSelector.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>451</width>
-    <height>211</height>
+    <height>224</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>210</height>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -56,14 +56,20 @@
       <string notr="true">mega</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>12</number>
+      </property>
       <property name="topMargin">
-       <number>5</number>
+       <number>12</number>
       </property>
       <property name="rightMargin">
-       <number>11</number>
+       <number>12</number>
       </property>
       <property name="bottomMargin">
-       <number>0</number>
+       <number>12</number>
       </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
@@ -71,19 +77,19 @@
          <widget class="QWidget" name="SelectorsContainer" native="true">
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <property name="spacing">
-            <number>5</number>
+            <number>6</number>
            </property>
            <property name="leftMargin">
-            <number>1</number>
+            <number>0</number>
            </property>
            <property name="topMargin">
-            <number>5</number>
+            <number>0</number>
            </property>
            <property name="rightMargin">
             <number>0</number>
            </property>
            <property name="bottomMargin">
-            <number>5</number>
+            <number>0</number>
            </property>
            <item>
             <widget class="QRadioButton" name="SmartSelector">
@@ -157,7 +163,7 @@
             <number>0</number>
            </property>
            <property name="bottomMargin">
-            <number>10</number>
+            <number>0</number>
            </property>
            <item alignment="Qt::AlignBottom">
             <widget class="QWidget" name="ButtonContainer" native="true">
@@ -262,14 +268,20 @@
       <string notr="true">mega</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>12</number>
+      </property>
       <property name="topMargin">
-       <number>9</number>
+       <number>12</number>
       </property>
       <property name="rightMargin">
-       <number>10</number>
+       <number>12</number>
       </property>
       <property name="bottomMargin">
-       <number>9</number>
+       <number>12</number>
       </property>
       <item>
        <widget class="QLabel" name="label">
